# N-Body-gravity-sim

./: .gitignore  README.md  README_zh.md
cpp_engine/: CMakeLists.txt
cpp_engine/include/nbody/: Star.h  Universe.h
cpp_engine/src/: Universe.cpp  bindings.cpp
